package com.fst.projet;

import javafx.application.Application;

public class Launcher {
    public static void main(String[] args) {
        Application.launch(ImageProcessingApp.class, args);
    }
}